# library_catalog

./: .env  .gitignore  README.md  alembic.ini  books.json  docker-compose-local.yaml  docker-compose-prod.yml  main.py  pyproject.toml
HTTP_REQUEST/: BaseApi.py
alembic/: env.py
alembic/versions/: c82e45ec91fb_create_table_books.py  dd741fc047e0_создать_таблицу_books.py
api/: Books.py
application/services/: book_service.py
config/: settings.py
db/: settings.py
domain/: BaseApi.py  exceptions.py
domain/entities/: book.py
domain/models/: Books.py
domain/repositories/: book_repository.py
domain/schemas/: book.py  pagination.py
infrastructure/: shemas.py
infrastructure/cache/: redis_cache.py
infrastructure/database/: session.py
infrastructure/json_save/: save_in_jsonbin.py
infrastructure/logging/: setup.py
infrastructure/repositories/: book_repository.py
infrastructure/search_info_from_books/: search_books.py
json_save/: books_json.py  save_in_jsonbin.py
migrations/: env.py
migrations/versions/: 3f65820713fd_create_items_table.py
models/: Books.py
presentation/api/: dependencies.py  exception_handlers.py
presentation/api/v1/: books.py  health.py
presentation/middleware/: logging.py  rate_limit.py
search_info_from_books/: search_books.py
use_cases/api/: Books.py
